# delivery-pipeline-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_airflow.sh  runbook.md
dags/: .airflowignore  delivery_pipeline_dag.py  pipeline.py
data/raw/: orders.csv
notebooks/: delivery_pipeline_demo.ipynb
