[tool.poetry]
name = "delivery-pipeline-demo"
version = "0.1.0"
description = "Pipeline de predicción de retrasos en entregas con Apache Airflow"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
scikit-learn = "1.5.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
